Changed env to be compatible with server

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:behrad6623@db:5432/presenza
+sqlalchemy.url = postgresql://postgres:Storelink2024@db:5432/presenza
 
 
 [post_write_hooks]
