--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres:behrad6623@localhost/presenza
+DATABASE_URL=postgresql://postgres:Storelink2024@localhost/presenze
 REACT_APP_BACKEND_URL=http://localhost:8000
