--- a/alembic.ini
+++ b/alembic.ini
@@ -61,7 +61,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:behrad6623@localhost/presenza
+sqlalchemy.url = postgresql://postgres:Storelink2024@localhost/presenze
 
 
 [post_write_hooks]
